Init Java Project structure and database configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,32 @@
-# ========================
-# IntelliJ IDEA
-# ========================
+# ===============================
+# ARCHIVOS DE INTELLIJ IDEA
+# ===============================
 .idea/
 *.iml
-out/
 
-# ========================
-# Maven
-# ========================
+# ===============================
+# MAVEN
+# ===============================
 target/
-!.mvn/wrapper/maven-wrapper.jar
 
-# ========================
-# Logs
-# ========================
-*.log
-
-# ========================
-# Environment / Secrets
-# ========================
-.env
-*.env
-application.properties
-application.yml
-
-# ========================
-# OS
-# ========================
+# ===============================
+# ARCHIVOS DE SISTEMA
+# ===============================
 .DS_Store
 Thumbs.db
+
+# ===============================
+# VARIABLES DE ENTORNO / CONFIGS LOCALES
+# ===============================
+.env
+
+# ===============================
+# LOGS
+# ===============================
+*.log
+
+# ===============================
+# ARCHIVOS TEMPORALES
+# ===============================
+*.tmp
+*.swp
