--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <!-- Versión del modelo de Maven -->
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- Identidad del proyecto -->
     <groupId>org.example</groupId>
     <artifactId>tiendaBarrio</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- Propiedades globales del proyecto -->
     <properties>
+        <!-- Versión de Java -->
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+
+        <!-- Codificación -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <!-- Dependencias del proyecto -->
+    <dependencies>
+
+        <!-- Driver JDBC oficial para PostgreSQL -->
+        <!-- Permite que Java se conecte a PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
