Configure PostgreSQL connection and verify succesful DB access

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,4 @@ db.url=jdbc:postgresql://localhost:5432/tienda_barrio
 
 # Usuario de la base de datos
 db.user=postgres
-
-# La contraseña NO va aquí
-# Se leerá desde una variable de entorno por seguridad
-db.password=${DB_PASSWORD}
+db.password=1211
