--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <version>42.7.3</version>
         </dependency>
 
+        <!-- NUEVA DEPENDENCIA: BCrypt para hashing seguro de contraseñas -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
