fix: se esta usando el schema tienda en la bd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # CONFIGURACIÓN BASE DE DATOS
 
 # URL de conexión JDBC a PostgreSQL
-db.url=jdbc:postgresql://localhost:5432/tienda_barrio
+db.url=jdbc:postgresql://localhost:5432/tienda_barrio?currentSchema=tienda
 
 # Usuario de la base de datos
 db.user=postgres
