--- a/pom.xml
+++ b/pom.xml
@@ -20,26 +20,59 @@
 
         <!-- Codificación -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- Versión de JavaFX -->
+        <javafx.version>21</javafx.version>
     </properties>
 
     <!-- Dependencias del proyecto -->
     <dependencies>
 
         <!-- Driver JDBC oficial para PostgreSQL -->
-        <!-- Permite que Java se conecte a PostgreSQL -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.3</version>
         </dependency>
 
-        <!-- NUEVA DEPENDENCIA: BCrypt para hashing seguro de contraseñas -->
+        <!-- BCrypt para hashing seguro de contraseñas -->
         <dependency>
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
 
+        <!-- JAVAFX: Controles básicos (botones, labels, tablas, etc.) -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
+        <!-- JAVAFX: Gráficos y charts (opcional pero útil para reportes) -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
     </dependencies>
+
+    <!-- Configuración de build -->
+    <build>
+        <plugins>
+
+            <!-- Plugin de JavaFX para ejecutar la aplicación -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>com.tiendabarrio.Main</mainClass>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
